system/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: csuos-system
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: "basic"
    ingress.kubernetes.io/auth-secret: "admin"
spec:
  rules:
  - host: storage.csuos.ml
    http:
      paths:
        - backend:
            serviceName: longhorn-frontend
            servicePort: 80
